<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/register_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="120dp"
        android:text="@string/register"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Register" />

    <TextView
        android:id="@+id/UserR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/user"
        android:textColor="#191717"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_username"
        app:layout_constraintEnd_toStartOf="@+id/input_username"
        tools:text="USER:" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/username"
        android:textColor="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Avatar"
        tools:text="E-MAIL" />

    <EditText
        android:id="@+id/input_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/pwdR"
        android:textColor="#B0171212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        android:autofillHints="" />

    <TextView
        android:id="@+id/PwdR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/pwdRt"
        android:textColor="#191717"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_pwd"
        app:layout_constraintEnd_toStartOf="@+id/input_pwd" />

    <ImageView
        android:id="@+id/Avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="140dp"
        android:contentDescription="@string/avatarR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>